@@ -1,3 +1,8 @@
+2008-11-20  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* CloneMethodShouldNotReturnNullTest.cs: Adjust fixture since the
+	rule now check methods.
+
 2008-11-14  Jesse Jones  <jesjones@mindspring.com>
 
 	* DisableDebuggingCodeTest.cs: Tweaked to allow it to work when
